@@ -1,5 +1,5 @@
 /* java.beans.DesignMode
-   Copyright (C) 1999 Free Software Foundation, Inc.
+   Copyright (C) 1999, 2006, Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -39,7 +39,8 @@ exception statement from your version. */
 package java.beans;
 
 /**
- * <code>BeanContextChild</code> implementors implement this to get information about whether they are in a design time or runtime environment.
+ * <code>BeanContextChild</code> implementors implement this to get information
+ * about whether they are in a design time or runtime environment.
  * The reason this is restricted to <code>BeanContextChild</code>ren is that
  * only things in the <code>BeanContext</code> hierarchy are given this
  * information in the first place.
@@ -48,46 +49,47 @@ package java.beans;
  * @since JDK1.2
  * @see java.beans.beancontext.BeanContextChild
  */
+public interface DesignMode 
+{
 
-public interface DesignMode {
-	/**
-	 * Use this name when firing <code>PropertyChangeEvent</code>s from your Bean.  
-	 * @fixme Check whether PROPERTYNAME is set to same value as Sun.
-	 */
-	String PROPERTYNAME = "designTime";
+  /**
+   * Use this name when firing <code>PropertyChangeEvent</code>s from your Bean.
+   */
+  String PROPERTYNAME = "designTime";
 
-	/**
-	 * The environment will call this method on your
-	 * <code>BeanContextChild</code> when it is registered in a parent
-	 * <code>BeanContext</code> or when behavior needs to switch from
-	 * design time to runtime behavior (or vice versa).
-	 * <P>
-	 *
-	 * <code>BeanContext</code>s are required to fire
-	 * <code>PropertyChangeEvent</code>s when properties change.
-	 * <code>designTime</code> is a property, and therefore when you
-	 * implement <code>setDesignTime()</code>, you need to fire a
-	 * <code>PropertyChangeEvent</code> with the old value, the new
-	 * value and using <code>PROPERTYNAME</code> as the property name.
-	 *
-	 * @param designTime the new value of design time,
-	 *        <code>true</code> if it is design time,
-	 *        <code>false</code> if it is runtime.
-	 *
-	 * @fixme I'm frankly not really sure whether it's the case that
-	 *        the BeanContext can <em>change</em> the status of the Bean from
-	 *        design time to runtime.  But it appears that it may be so.
-	 *
-	 * @see java.util.PropertyChangeEvent
-	 * @see java.beans.beancontext.BeanContext
-	 * @see #PROPERTYNAME
-	 */
-	void setDesignTime(boolean designTime);
+  /**
+   * The environment will call this method on your
+   * <code>BeanContextChild</code> when it is registered in a parent
+   * <code>BeanContext</code> or when behavior needs to switch from
+   * design time to runtime behavior (or vice versa).
+   * <P>
+   *
+   * <code>BeanContext</code>s are required to fire
+   * <code>PropertyChangeEvent</code>s when properties change.
+   * <code>designTime</code> is a property, and therefore when you
+   * implement <code>setDesignTime()</code>, you need to fire a
+   * <code>PropertyChangeEvent</code> with the old value, the new
+   * value and using <code>PROPERTYNAME</code> as the property name.
+   *
+   * @param designTime the new value of design time,
+   *        <code>true</code> if it is design time,
+   *        <code>false</code> if it is runtime.
+   *
+   * @fixme I'm frankly not really sure whether it's the case that
+   *        the BeanContext can <em>change</em> the status of the Bean from
+   *        design time to runtime.  But it appears that it may be so.
+   *
+   * @see java.beans.PropertyChangeEvent
+   * @see java.beans.beancontext.BeanContext
+   * @see #PROPERTYNAME
+   */
+  void setDesignTime(boolean designTime);
 
-	/**
-	 * This method should tell whether it is design time or runtime.
-	 * @return <code>true</code> if design time, <code>false</code> if
-	 *         runtime.
-	 */
-	boolean isDesignTime();
+  /**
+   * This method should tell whether it is design time or runtime.
+   * @return <code>true</code> if design time, <code>false</code> if
+   *         runtime.
+   */
+  boolean isDesignTime();
+
 }
